...
                                        <rect key="frame" x="0.0" y="288" width="256" height="51"/>
                                        <color key="backgroundColor" name="IconColor"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="256" id="oab-DC-qKG"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                                        <state key="normal" title="View Planets">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="8"/>
...
                                        <rect key="frame" x="0.0" y="371" width="256" height="51"/>
                                        <color key="backgroundColor" name="IconColor"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="256" id="hfl-hq-uUn"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                                        <state key="normal" title="View Credits">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="8"/>
...
            </objects>
            <point key="canvasLocation" x="-1010" y="1163"/>
        </scene>
        <!--Credits-->
        <scene sceneID="yx7-4f-i1I">
            <objects>
                <viewController title="Credits" id="xwB-Ly-nGc" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="suA-GR-uHj">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r92-uo-fUg">
                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
...
            </objects>
            <point key="canvasLocation" x="-3075" y="1163"/>
        </scene>
        <!--A list of planets-->
        <scene sceneID="276-jV-COp">
            <objects>
                <tableViewController title="A list of planets" id="4BB-UD-j1B" customClass="PlanetTableViewController" customModule="InterplanetaryCalendar" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="96" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="idh-zN-cwd">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <view key="tableFooterView" contentMode="scaleToFill" id="CZ1-1C-jX3">
                            <rect key="frame" x="0.0" y="124" width="414" height="44"/>
...
