...

class PlanetTableViewController: UITableViewController {
    let data = [
        Planet(name: "Mercury", position: 1, distanceFromSun: 0.47),
        Planet(name: "Venus", position: 2, distanceFromSun: 0.72),
        Planet(name: "Earth", position: 3, distanceFromSun:  0.983),
        Planet(name: "Mars", position: 4, distanceFromSun: 1.542),
        Planet(name: "Jupiter", position: 5, distanceFromSun: 5.2),
        Planet(name: "Saturn", position: 6, distanceFromSun: 10.07),
        Planet(name: "Uranus", position: 8, distanceFromSun: 18.4),
        Planet(name: "Neptune", position: 7, distanceFromSun: 29.8),
        Planet(name: "Pluto", position: 9, distanceFromSun: 29.7)
    ]
...
