//
//  InterplanetaryCalendarUITests.swift
//  InterplanetaryCalendarUITests
//
//  Created by Venture Stegasaur on 4/7/19.
//  Copyright © 2019 Steve Richey. All rights reserved.
//

import XCTest

class InterplanetaryCalendarUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.

        let app = XCUIApplication()
        app.buttons["View Planets"].tap()
        app.tables/*@START_MENU_TOKEN@*/.staticTexts["Mars"]/*[[".cells.staticTexts[\"Mars\"]",".staticTexts[\"Mars\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.swipeUp()
        app.navigationBars["A list of planets"].buttons["InterPlan"].tap()
        app.buttons["View Credits"].tap()
        app.statusBars.otherElements["6:05 PM"]/*@START_MENU_TOKEN@*/.swipeLeft()/*[[".swipeDown()",".swipeLeft()"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
        app.navigationBars["Credits"].buttons["InterPlan"].tap()

    }

}
